fix posts gap with align-content property

--- a/src/components/Posts/Posts.scss
+++ b/src/components/Posts/Posts.scss
@@ -10,6 +10,7 @@
   scrollbar-width: none;
   @include mixins.elementLayout(row, flex-start, flex-start, 3);
   padding-bottom: 5.5rem;
+  align-content: start;
 
   &::-webkit-scrollbar {
     display: none;
